--- a/Reccipe/requirements.txt
+++ b/Reccipe/requirements.txt
@@ -1,4 +1,4 @@
-﻿asgiref==3.8.1
+asgiref==3.8.1
 Django==5.1.4
 numpy==2.2.0
 pillow==11.0.0
@@ -7,3 +7,4 @@ somepackage==1.2.3
 sqlparse==0.5.3
 tzdata==2024.2
 wheel==0.45.1
+pywin32==308; platform_system == "Windows"
